--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 	
 	   
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-JXQGYRV7FE"></script>
-<script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-JXQGYRV7FE" defer></script>
+<script defer>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
@@ -228,7 +228,7 @@ Are you a passionate sports fan looking for the best platform to watch your favo
   </ul>
   <p>© 2025 sportsurge.shop. All rights reserved.</p>
 
-<script src="script.js"></script>
+<script src="script.js" defer></script>
 	  
   </footer>
 
@@ -244,12 +244,13 @@ Are you a passionate sports fan looking for the best platform to watch your favo
   <span id="close-ad">&#10060;</span>
 </div>
 
-<script src="mobiledetectscript.js"></script>
+<script src="mobiledetectscript.js" defer></script>
 
 	
 
 </body>
 </html>
+
 
 
 
