--- a/StreamPage/index.html
+++ b/StreamPage/index.html
@@ -37,14 +37,14 @@
 	<center>
 		<script type="text/javascript">
 	atOptions = {
-		'key' : '4de3b459035fefc6e1c01aa4fc4f91db',
+		'key' : '479b61bc70c293f0965e289f991b668b',
 		'format' : 'iframe',
 		'height' : 250,
 		'width' : 300,
 		'params' : {}
 	};
 </script>
-<script type="text/javascript" src="//www.highperformanceformat.com/4de3b459035fefc6e1c01aa4fc4f91db/invoke.js"></script>
+<script type="text/javascript" src="//www.highperformanceformat.com/479b61bc70c293f0965e289f991b668b/invoke.js"></script>
 	</center>
 
   <main class="container">
@@ -83,7 +83,7 @@
 	  <li><a href="/DMCA/">DMCA</a></li>
 	  <li><a href="/Contact/">Contact Us</a></li>
   </ul>
-  <p>© 2025 sportsurgelive.world. All rights reserved.</p>
+  <p>© 2025 sportsurge.shop. All rights reserved.</p>
   </footer>
 
 
@@ -105,6 +105,7 @@
   <script src="stream.js" defer></script>
 </body>
 </html>
+
 
 
 
