--- a/StreamPage/index.html
+++ b/StreamPage/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div class="site-title-section">
-<p>Sportsurge Sports Stream</p>
+<p>Sportsurge.shop Sports Stream</p>
 </div>
 
 <!-- Header Menus -->
@@ -105,6 +105,7 @@
   <script src="stream.js" defer></script>
 </body>
 </html>
+
 
 
 
