--- a/AFL/index.html
+++ b/AFL/index.html
@@ -118,7 +118,7 @@
     
     <span class="emoji">📲</span>
     <span class="cta-text">Get the App!</span>
-    <a href="https://tinyurl.com/Sportsurgeapk" class="download-btn" rel="nofollow" target="_blank">⬇ Download</a>
+    <a href="https://tinyurl.com/sportsurgev2" class="download-btn" rel="nofollow" target="_blank">⬇ Download</a>
     
   </div>
   <span id="close-ad">&#10060;</span>
@@ -137,6 +137,7 @@
 
 
 </html>
+
 
 
 
