--- a/NCAA/index.html
+++ b/NCAA/index.html
@@ -56,6 +56,13 @@
     <p>Loading Matches...</p>
   </div>
 
+	<!-- Filter Buttons -->
+<div class="filter-buttons">
+  <button id="all-btn" class="filter-btn active">All</button>
+  <button id="live-btn" class="filter-btn live">Live <span id="live-count">0</span></button>
+  <button id="upcoming-btn" class="filter-btn">Upcoming</button>
+</div>
+
   <!-- Matches Table -->
   <table id="matches-table">
     <thead>
@@ -120,7 +127,7 @@
     
     <span class="emoji">📲</span>
     <span class="cta-text">Get the App!</span>
-    <a href="https://tinyurl.com/Sportsurgeapk" class="download-btn" rel="nofollow" target="_blank">⬇ Download</a>
+    <a href="https://tinyurl.com/sportsurgev2" class="download-btn" rel="nofollow" target="_blank">⬇ Download</a>
     
   </div>
   <span id="close-ad">&#10060;</span>
@@ -139,6 +146,7 @@
 
 
 </html>
+
 
 
 
