--- a/UFC/index.html
+++ b/UFC/index.html
@@ -57,6 +57,13 @@
     <p>Loading Matches...</p>
   </div>
 
+	<!-- Filter Buttons -->
+<div class="filter-buttons">
+  <button id="all-btn" class="filter-btn active">All</button>
+  <button id="live-btn" class="filter-btn live">Live <span id="live-count">0</span></button>
+  <button id="upcoming-btn" class="filter-btn">Upcoming</button>
+</div>
+
   <!-- Matches Table -->
   <table id="matches-table">
     <thead>
@@ -122,7 +129,7 @@
     
     <span class="emoji">📲</span>
     <span class="cta-text">Get the App!</span>
-    <a href="https://tinyurl.com/Sportsurgeapk" class="download-btn" rel="nofollow" target="_blank">⬇ Download</a>
+    <a href="https://tinyurl.com/sportsurgev2" class="download-btn" rel="nofollow" target="_blank">⬇ Download</a>
     
   </div>
   <span id="close-ad">&#10060;</span>
@@ -141,6 +148,7 @@
 
 
 </html>
+
 
 
 
