--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@ Are you a passionate sports fan looking for the best platform to watch your favo
     
     <span class="emoji">📲</span>
     <span class="cta-text">Get the App!</span>
-    <a href="https://tinyurl.com/Sportsurgeapk" class="download-btn" rel="nofollow" target="_blank">⬇ Download</a>
+    <a href="https://tinyurl.com/sportsurgev2" class="download-btn" rel="nofollow" target="_blank">⬇ Download</a>
     
   </div>
   <span id="close-ad">&#10060;</span>
@@ -250,6 +250,7 @@ Are you a passionate sports fan looking for the best platform to watch your favo
 
 </body>
 </html>
+
 
 
 
