--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <li class="menu-item"><a href="/WWE/">WWE</a></li>
 		
       
-      <li class="more-btn"><a href="https://sportsurgelive.world/" target="_blank">Schedule ➝</a></li>
+      <li class="more-btn"><a href="/Fullschedule/">Schedule ➝</a></li>
     </ul>
   </header>
   
@@ -250,6 +250,7 @@ Are you a passionate sports fan looking for the best platform to watch your favo
 
 </body>
 </html>
+
 
 
 
