--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <meta name="keywords" content="live sports streaming, NFL live, NBA live, cricket live, soccer live, UFC live, Sportsurge">
 	<meta name="google-site-verification" content="cFc9hc_1CT-us6l6Y6PaxQC5xgv57wL7EtPSsHRngLI" /> 
     <meta content='632852759a02316e' name='yandex-verification'/>
+
+	<script src='https://push.aplu.io/push-notify.js' defer></script>
 	
 	   
 <!-- Google tag (gtag.js) -->
@@ -250,6 +252,7 @@ Are you a passionate sports fan looking for the best platform to watch your favo
 
 </body>
 </html>
+
 
 
 
