--- a/index.html
+++ b/index.html
@@ -186,5 +186,10 @@
 <script src="script.js" defer></script>
 <!-- Note: The mobiledetectscript.js is loaded dynamically via the main script.js -->
 
+
+	<script src="bookmark-prompt.js" defer></script>
+
+
 </body>
 </html>
+
