--- a/Schedule/index.html
+++ b/Schedule/index.html
@@ -20,13 +20,13 @@
   <script src="/mobiledetectscript.js" defer></script>
 
 
-	  <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-3Y99MPECJ5" defer></script>
-  <script defer>
+	  <!-- Analytics & Push Notifications -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-JXQGYRV7FE"></script>
+  <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-    gtag('config', 'G-3Y99MPECJ5');
+    gtag('config', 'G-JXQGYRV7FE');
   </script>
 
 	
@@ -180,6 +180,7 @@
 </body>
 
 </html>
+
 
 
 
