--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
   <meta name="keywords" content="live sports streaming, NFL live, NBA live, cricket live, soccer live, UFC live, Sportsurge">
   <meta name="google-site-verification" content="cFc9hc_1CT-us6l6Y6PaxQC5xgv57wL7EtPSsHRngLI" />
   <meta content='632852759a02316e' name='yandex-verification'/>
+  
+  <!-- ADD THIS: Open Graph Site Name -->
+    <meta property="og:site_name" content="Sportsurge V3">
 
   <!-- Performance Preconnects -->
+  <link rel="preconnect" href="https://www.google-analytics.com" crossorigin>
   <link rel="preconnect" href="https://www.googletagmanager.com" crossorigin>
   <link rel="preconnect" href="https://streamed.pk" crossorigin>
 
@@ -24,12 +28,22 @@
 
   <!-- Performance: Critical CSS is inlined for instant rendering -->
   <style>
-    :root{--bg-primary:#0a0a0a;--bg-secondary:#161b22;--text-primary:#c9d1d9;--text-secondary:#8b949e;--accent-primary:#ff5e00;--accent-secondary:#ff9800;--border-color:#262626}body{margin:0;font-family:Inter,system-ui,-apple-system,"Segoe UI",Roboto,"Helvetica Neue",Arial;background:var(--bg-primary);color:var(--text-primary);line-height:1.6}body a{color:var(--accent-primary)}header{padding:8px 20px;display:flex;justify-content:center}.main-header{background:#000015;padding:10px 20px;display:flex;justify-content:center;transition:background-color .3s ease}.nav-menu{list-style:none;display:flex;gap:10px;flex-wrap:nowrap;margin:0;padding:5px 8px;justify-content:center;align-items:center}.nav-menu li.menu-item{flex-shrink:1}.nav-menu li a{color:#0ea5a4;text-decoration:none;font-weight:500;padding:6px 12px;border-radius:6px;transition:.3s}main{display:block}.main-content-title{text-align:center;font-size:clamp(1.5rem,5vw,2.2rem);font-weight:700;color:#fff;margin:1.5rem 0 3rem;padding:0 1rem;letter-spacing:.5px;text-shadow:1px 1px 4px rgba(0,0,0,.6)}.nav-discord-btn a{display:flex;align-items:center;gap:.5rem;background-color:#5865F2;color:#fff!important;font-weight:600;padding:6px 14px;border-radius:6px;transition:.3s;white-space:nowrap}.search-and-schedule-container{display:flex;gap:1rem;align-items:center;margin-bottom:3rem;padding:0 1rem}.search-trigger{flex-grow:1;display:flex;align-items:center;gap:.75rem;background-color:#000015;padding:.8rem 1rem;border-radius:8px;border:1px solid rgba(255,94,0,.3);cursor:pointer;transition:all .3s ease;color:var(--text-secondary)}.search-trigger svg{width:1em;height:1em;color:var(--accent-primary);fill:currentColor}.schedule-button{flex-shrink:0;padding:.8rem 1.5rem;background-color:var(--accent-primary);color:#fff;font-weight:600;text-decoration:none;border-radius:8px;transition:background-color .3s ease;text-align:center}.categories-container{width:90%;max-width:1400px;margin:2rem auto;padding:1rem 0}.categories-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(220px,1fr));gap:2rem}.category-card{position:relative;overflow:hidden;display:flex;flex-direction:column;align-items:center;justify-content:center;padding:2.5rem 1.5rem;background-color:#000015;border-radius:16px;text-decoration:none;color:#fff;border:1px solid rgba(255,94,0,.3);box-shadow:0 4px 10px rgba(0,0,0,.4)}.category-card img{width:90px;height:90px;object-fit:contain;margin-bottom:1.5rem;z-index:2}.category-card span{font-size:1.25rem;font-weight:600;display:block;color:#fff;text-transform:uppercase;letter-spacing:1px;z-index:2;text-align:center}@media(max-width:768px){.nav-menu{overflow-x:auto;-webkit-overflow-scrolling:touch}.main-content-title{margin:1rem 0 2rem;font-size:1.4rem}.categories-grid{grid-template-columns:repeat(auto-fit,minmax(180px,1fr));gap:1.5rem}.category-card{padding:2rem 1rem}}@media(max-width:600px){.search-and-schedule-container{flex-direction:column;align-items:stretch}}@media(max-width:480px){.categories-grid{grid-template-columns:1fr 1fr;gap:1rem}.category-card img{max-width:70px;height:70px}.category-card span{font-size:1rem}}
+    :root{--bg-primary:#0d1117;--bg-secondary:#161b22;--text-primary:#c9d1d9;--text-secondary:#8b949e;--accent-primary:#3a86ff;--accent-secondary:#00b4d8;--border-color:#30363d}body{margin:0;font-family:Inter,system-ui,-apple-system,"Segoe UI",Roboto,"Helvetica Neue",Arial;background:var(--bg-primary);color:var(--text-primary);line-height:1.6}body a{color:var(--accent-primary)}header{padding:8px 20px;display:flex;justify-content:center}.main-header{background:rgba(13,17,23,0.8);backdrop-filter:blur(8px);-webkit-backdrop-filter:blur(8px);padding:10px 20px;display:flex;justify-content:center;transition:background-color .3s ease}.nav-menu{list-style:none;display:flex;gap:10px;flex-wrap:nowrap;margin:0;padding:5px 8px;justify-content:center;align-items:center}.nav-menu li.menu-item{flex-shrink:1}.nav-menu li a{color:#ade8f4;text-decoration:none;font-weight:500;padding:6px 12px;border-radius:6px;transition:.3s}main{display:block}.main-content-title{text-align:center;font-size:clamp(1.5rem,5vw,2.2rem);font-weight:700;color:#fff;margin:1.5rem 0 3rem;padding:0 1rem;letter-spacing:.5px;text-shadow:1px 1px 4px rgba(0,0,0,.6)}.nav-discord-btn a{display:flex;align-items:center;gap:.5rem;background-color:#5865F2;color:#fff!important;font-weight:600;padding:6px 14px;border-radius:6px;transition:.3s;white-space:nowrap}.search-and-schedule-container{display:flex;gap:1rem;align-items:center;margin:0 auto 3rem auto;padding:0 1rem;max-width:1400px;width:90%}.search-trigger{flex-grow:1;display:flex;align-items:center;gap:.75rem;background-color:var(--bg-secondary);padding:.8rem 1rem;border-radius:8px;border:1px solid var(--border-color);cursor:pointer;transition:all .3s ease;color:var(--text-secondary)}.search-trigger svg{width:1em;height:1em;color:var(--accent-primary);fill:currentColor}.schedule-button{flex-shrink:0;padding:.8rem 1.5rem;background-color:var(--accent-primary);color:#fff;font-weight:600;text-decoration:none;border-radius:8px;transition:background-color .3s ease;text-align:center}.categories-container{width:90%;max-width:1400px;margin:2rem auto;padding:1rem 0}.categories-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(220px,1fr));gap:2rem}.category-card{position:relative;overflow:hidden;display:flex;flex-direction:column;align-items:center;justify-content:center;padding:2.5rem 1.5rem;background-color:var(--bg-secondary);border-radius:16px;text-decoration:none;color:#fff;border:1px solid var(--border-color);box-shadow:0 4px 10px rgba(0,0,0,.4)}.category-card img{width:90px;height:90px;object-fit:contain;margin-bottom:1.5rem;z-index:2}.category-card span{font-size:1.25rem;font-weight:600;display:block;color:#fff;text-transform:uppercase;letter-spacing:1px;z-index:2;text-align:center}@media(max-width:768px){.nav-menu{overflow-x:auto;-webkit-overflow-scrolling:touch}.main-content-title{margin:1rem 0 2rem;font-size:1.4rem}.categories-grid{grid-template-columns:repeat(auto-fit,minmax(180px,1fr));gap:1.5rem}.category-card{padding:2rem 1rem}}@media(max-width:600px){.search-and-schedule-container{flex-direction:column;align-items:stretch}}@media(max-width:480px){.categories-grid{grid-template-columns:1fr 1fr;gap:1rem}.category-card img{max-width:70px;height:70px}.category-card span{font-size:1rem}}
   </style>
 
   <!-- Performance: Load main stylesheet asynchronously -->
   <link rel="preload" href="style.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="style.css"></noscript>
+  <script src="/mobiledetectscript.js" defer></script>
+  <!-- ADD THIS: WebSite Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "name": "Sportsurge V3",
+    "url": "https://sportsurge.shop/"
+  }
+  </script>
   
   <!-- Analytics & Push Notifications -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-JXQGYRV7FE"></script>
@@ -61,7 +75,7 @@
   <div class="search-and-schedule-container">
     <div class="search-trigger" id="search-trigger">
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M416 208c0 45.9-14.9 88.3-40 122.7L502.6 457.4c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376c-34.4 25.2-76.8 40-122.7 40C93.1 416 0 322.9 0 208S93.1 0 208 0S416 93.1 416 208zM208 352a144 144 0 1 0 0-288 144 144 0 1 0 0 288z"/></svg>
-      <span>Search for a match, team, or category...</span>
+      <span>Search for a match...</span>
     </div>
     <a href="/Schedule/?popular=true" class="schedule-button">Full Schedule</a>
   </div>
@@ -160,15 +174,14 @@
   <p>© 2025 sportsurge.shop. All rights reserved.</p>
 </footer>
 
-<!-- Sticky Footer Ad -->
-<div id="sticky-footer-ad">
-  <div class="ad-content">
-    <span class="emoji">📲</span>
-    <span class="cta-text">Get Sportsurge App!</span>
-    <a href="https://tinyurl.com/sportsurgev2" class="download-btn" rel="nofollow" target="_blank">⬇ Download</a>
+
+<!-- [NEW] Sticky Ad Placeholder -->
+  <div id="sticky-ad-placeholder">
+    <div id="sticky-footer-ad">
+      <div class="ad-content"><span class="emoji">📲</span><span class="cta-text">Get App!</span><a href="https://tinyurl.com/sportsurgev2" class="download-btn" rel="nofollow" target="_blank">⬇ Download</a></div>
+      <span id="close-ad">&#10060;</span>
+    </div>
   </div>
-  <span id="close-ad">&#10060;</span>
-</div>
 
 <!-- Search Overlay -->
 <div class="search-overlay" id="search-overlay">
@@ -177,12 +190,10 @@
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512" style="width: 0.75em; height: 1em;"><path fill="currentColor" d="M342.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 210.7 86.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L146.7 256 41.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 301.3 297.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.3 256 342.6 150.6z"/></svg>
     </button>
     <div class="search-input-container">
-      <i class="fas fa-search"></i>
       <input type="text" id="search-input" placeholder="Start typing to find any match..." autocomplete="off">
     </div>
     <div class="search-results-container" id="search-results-container">
       <div class="search-placeholder">
-        <i class="fas fa-search"></i>
         <p>Find live matches by team, sport, or title.</p>
       </div>
     </div>
@@ -191,7 +202,6 @@
 
 <script src="script.js" defer></script>
 <!-- Note: The mobiledetectscript.js is loaded dynamically via the main script.js -->
-
 
 	<script src="bookmark-prompt.js" defer></script>
 
@@ -209,6 +219,31 @@
         });
       }
     </script>
+
+	<!-- [ADD THIS] New, faster delayed Google Analytics loader -->
+  <script>
+    const GTAG_ID = 'G-JXQGYRV7FE';
+    let gtagLoaded = false;
+    function loadGtag() {
+      if (gtagLoaded) return;
+      gtagLoaded = true;
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){ dataLayer.push(arguments); }
+      gtag('js', new Date());
+      gtag('config', GTAG_ID);
+      const script = document.createElement('script');
+      script.src = `https://www.googletagmanager.com/gtag/js?id=${GTAG_ID}`;
+      script.async = true;
+      document.head.appendChild(script);
+      ['scroll', 'mousemove', 'touchstart'].forEach(type => {
+        window.removeEventListener(type, loadGtag);
+      });
+    }
+    window.addEventListener('scroll', loadGtag, { once: true });
+    window.addEventListener('mousemove', loadGtag, { once: true });
+    window.addEventListener('touchstart', loadGtag, { once: true });
+    setTimeout(loadGtag, 4000);
+  </script>
 
 
 </body>
