--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sportsurge: Official NFL, NBA, UFC & College Football Streams (V3)</title>
+  <title>Sportsurge Official: NFL, NBA, UFC & College Football Streams (V3)</title>
   <meta name="description" content="Stream live sports in HD quality on sportsurge.shop. Enjoy NFL, NBA, Cricket, Soccer, UFC, and more with a user-friendly interface">
   <meta name="keywords" content="live sports streaming, NFL live, NBA live, cricket live, soccer live, UFC live, Sportsurge">
   <meta name="google-site-verification" content="cFc9hc_1CT-us6l6Y6PaxQC5xgv57wL7EtPSsHRngLI" />
@@ -264,6 +264,7 @@
 
 </body>
 </html>
+
 
 
 
