--- a/index.html
+++ b/index.html
@@ -178,6 +178,17 @@
     <h3>3. Copyright Claims</h3>
     <p>We respect intellectual property rights. If you are a copyright owner and believe that a link in our directory infringes upon your rights, please contact the original hosting provider for immediate removal. You may also submit a DMCA request to us, and we will remove the specific reference link from our search index in compliance with US Law.</p>
   </div>
+
+	<!-- New Partners/Keywords Menu -->
+    <ul class="partners-menu">
+      <li><a href="https://buffstreams.world/">Buffstreams</a></li>
+      <li><a href="https://sportsurge.shop/">Sportsurge</a></li>
+      <li><a href="https://nflbite.wiki/">Nflbite</a></li>
+      <li><a href="https://streameastv2.world/">Streameast</a></li>
+      <li><a href="https://totalsportek.top/">Totalsportek</a></li>
+    </ul>
+
+	
   <ul class="footer-menu">
     <li><a href="/">Home</a></li>
     <li><a href="/About/">About</a></li>
@@ -264,6 +275,7 @@
 
 </body>
 </html>
+
 
 
 
