--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
     <ul class="partners-menu">
       <li><a href="https://buffstreams.world/">Buffstreams</a></li>
       <li><a href="https://sportsurge.shop/">Sportsurge</a></li>
-      <li><a href="https://nflbite.wiki/">Nflbite</a></li>
+      <li><a href="https://nflbite.top/">Nflbite</a></li>
       <li><a href="https://streameastv2.world/">Streameast</a></li>
       <li><a href="https://totalsportek.top/">Totalsportek</a></li>
     </ul>
@@ -275,6 +275,7 @@
 
 </body>
 </html>
+
 
 
 
