--- a/index.html
+++ b/index.html
@@ -186,6 +186,7 @@
       <li><a href="https://nflbite.top/">Nflbite</a></li>
       <li><a href="https://streameastv2.world/">Streameast</a></li>
       <li><a href="https://totalsportek.top/">Totalsportek</a></li>
+		<li><a href="https://hesgoal.guru/">Hesgoal</a></li>
     </ul>
 
 	
@@ -275,6 +276,7 @@
 
 </body>
 </html>
+
 
 
 
