--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sportsurge Official: NFL, NBA, UFC & College Football Streams (V3)</title>
+  <title>Sportsurge - Live Stream for NFL, NBA, NHL, MLB, UFC & More</title>
   <meta name="description" content="Stream live sports in HD quality on sportsurge.shop. Enjoy NFL, NBA, Cricket, Soccer, UFC, and more with a user-friendly interface">
   <meta name="keywords" content="live sports streaming, NFL live, NBA live, cricket live, soccer live, UFC live, Sportsurge">
   <meta name="google-site-verification" content="cFc9hc_1CT-us6l6Y6PaxQC5xgv57wL7EtPSsHRngLI" />
@@ -37,12 +37,16 @@
   <script src="/mobiledetectscript.js" defer></script>
   <!-- ADD THIS: WebSite Structured Data -->
   <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "WebSite",
-    "name": "Sportsurge V3",
-    "url": "https://sportsurge.shop/"
-  }
+  
+	  {
+  "@context": "https://schema.org/",
+  "@type": "WebSite",
+  "name": "Sportsurge",
+  "title": "Sportsurge - Live Stream for NFL, NBA, NHL, MLB, UFC & More",
+  "description":"Stream live sports in HD quality on sportsurge.shop. Enjoy NFL, NBA, Cricket, Soccer, UFC, and more with a user-friendly interface",
+  "publisher":{"@id":"Sportsurge"},
+  "url": "https://sportsurge.shop/"
+}
   </script>
   
   <!-- Analytics & Push Notifications -->
@@ -69,7 +73,7 @@
 </header>
 
 <main>
-  <h1 class="main-content-title" id="main-title">Welcome to Sportsurge: The Home of American Sports</h1>
+  <h1 class="main-content-title" id="main-title">Sportsurge - Live Stream for NFL, NBA, NHL, MLB, UFC & More</h1>
 
   <!-- Search Bar and Schedule Button -->
   <div class="search-and-schedule-container">
@@ -276,6 +280,7 @@
 
 </body>
 </html>
+
 
 
 
